# GuardX

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GuardX — Centralized LLM Guardrail Platform.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml
automation/: pyproject.toml
automation/guardx_automation/: __init__.py  __main__.py  client.py
automation/guardx_automation/autotuner/: __init__.py  tuner.py
automation/guardx_automation/feeds/: __init__.py  gitleaks.py
automation/guardx_automation/scheduler/: __init__.py  runner.py
automation/guardx_automation/synthesizer/: __init__.py  synth.py
automation/tests/: test_autotuner.py  test_feeds.py  test_synth.py
config/: automation.yaml  providers.yaml
console/: index.html  package-lock.json  package.json
console/src/: App.tsx
console/src/components/: Loading.tsx
console/src/lib/: api.ts  auth.tsx  useApi.ts
console/src/pages/: ApprovalQueue.tsx  CatalogPage.tsx  EvidencePage.tsx  HomePage.tsx  LoginPage.tsx  OnboardingPage.tsx  PoliciesPage.tsx  PolicyDetail.tsx  ShadowDeltaPage.tsx
console/src/styles/: global.css
control/: Dockerfile  alembic.ini  pyproject.toml
control/alembic/: env.py
control/alembic/versions/: 0001_initial.py  0002_evidence.py  0003_shadow_flag.py  0004_feedback_and_proposals.py
control/guardx_control/: __init__.py  config.py
control/guardx_control/api/: app.py  auth.py  bundles.py  deps.py  detectors.py  evidence.py  feedback.py  oidc.py  policies.py  profiles.py  schemas.py
control/guardx_control/bundle_builder/: __init__.py  builder.py
control/guardx_control/db/: __init__.py  session.py
control/guardx_control/evidence/: __init__.py  chain.py  minimizer.py
control/guardx_control/linter/: __init__.py  linter.py
control/guardx_control/models/: __init__.py  bundle.py  detector.py  evidence.py  feedback.py  policy.py  profile.py  tenant.py
control/guardx_control/profiles/: __init__.py  inheritance.py
control/guardx_control/signing/: __init__.py  canonical.py  signer.py
control/tests/: test_chain.py  test_inheritance.py  test_invariants.py  test_oidc.py
control/tests/linter/: test_linter.py
control/tests/signing/: test_canonical.py
deploy/compose/: docker-compose.yml
deploy/compose/upstream/: Dockerfile  main.py
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/alerts/: guardx-alerts.yaml
deploy/helm/dashboards/: gateway.json
deploy/helm/templates/: _helpers.tpl  console.yaml  control.yaml  detectors.yaml  gateway.yaml  observability.yaml
deploy/k6/: latency_budgets.js  latency_gate.sh
deploy/sbom/: generate.sh
detectors/llm_judge/: pyproject.toml
detectors/llm_judge/llm_judge/: __init__.py  backends.py  providers.py  rubric.py
detectors/llm_judge/rubrics/: nli_groundedness@1.0.0.yaml  policy_synth@1.0.0.yaml  safety@1.0.0.yaml  safety_llamaguard@1.0.0.yaml
detectors/llm_judge/tests/: test_judge.py
detectors/nli/: pyproject.toml
detectors/nli/nli_detector/: __init__.py  segmenter.py  service.py
detectors/nli/tests/: test_segmenter.py  test_service.py
detectors/pii/: Dockerfile  pyproject.toml
detectors/pii/pii_detector/: __init__.py  detector.py  entity_pack.py  service.py  validators.py
detectors/pii/tests/: test_detector.py
detectors/safety/: Dockerfile  pyproject.toml
detectors/safety/safety_detector/: __init__.py  service.py
detectors/safety/tests/: test_service.py
docs/compliance/: README.md  fips.md  mapping.md  pen-test.md
docs/deployment/: README.md  pre-push-checklist.md
docs/runbooks/: README.md  bundle-stale.md  chain-anchor-fail.md  fail-open.md  oidc-setup.md  provider-outage.md
entity_packs/: financial-us@2.1.yaml
gateway/: Dockerfile  go.mod
gateway/cmd/guardx-gateway/: main.go
gateway/internal/bundle/: canonical.go  detector_pin_test.go  poller.go  verifier.go  verifier_test.go
harness/: eval.py  m0_demo.sh  m1_demo.sh  m2_demo.sh  m3_demo.sh  m4_demo.sh  m5_demo.sh  seed_catalog.sh
harness/fixtures/: gitleaks_extra.json  policy_doc.txt
harness/golden/: financial_us.jsonl
harness/verify_chain/: go.mod  main.go
profiles/: baseline@1.0.0.yaml  glba-nydfs@1.0.0.yaml  hipaa@1.0.0.yaml
proto/: detector.proto
schemas/: bundle.schema.json  policy.schema.json
(+22 files in other folders)
