[project]
name = "guardx-control"
version = "0.1.0"
description = "GuardX Control API — policy registry, approval workflow, bundle signer."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "jsonschema>=4.23",
  "cryptography>=43",
  "python-multipart>=0.0.12",
  "httpx>=0.27",
  "PyJWT[crypto]>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["guardx_control*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py312"
