[project]
name = "guardx-llm-judge"
version = "0.1.0"
description = "GuardX LLM judge shim — versioned rubrics over swappable backends."
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
  "httpx>=0.27",
  "pydantic>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm_judge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
